[build-system]
requires = ["poetry>=1.0.1"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "cosmoz-rest-wrapper"
description = "cosmoz rest API application"
version = "0.0.1"
authors = ["Ashley Sommer <Ashley.Sommer@csiro.au>"]
license = "Apache-2.0"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.6"
# These packages are mandatory and form the core of this package’s distribution.
sanic = "~19.6.3"
sanic-plugins-framework = "~0.8.2.post1"
sanic-cors = "^0.9.9"
sanic-restplus = "~0.4.1.post1"
sanic-jinja2-spf = "*"
sanic-oauthlib = "^0.1.4"
sanic-session-spf = "*"
python-dotenv = "^0.10.0"
influxdb = "^5.2"
pymongo = "^3.7"
cachetools = "^3.0"
