[build-system]
requires = ["poetry>=1.0.1"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "cosmoz-rest-wrapper"
description = "cosmoz rest API application"
version = "0.0.1"
authors = ["Ashley Sommer <Ashley.Sommer@csiro.au>"]
license = "Apache-2.0"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.6"
# These packages are mandatory and form the core of this package’s distribution.
sanic = "~19.6.3"
sanic-plugins-framework = "~0.9.2"
sanic-cors = "^0.10.0.post3"
sanic-restplus = "~0.5.3.post3"
sanic-jinja2-spf = "*"
sanic-oauthlib = "^0.1.4"
sanic-session-spf = "*"
sanic-metrics = "^0.0.6"
orjson = "^2.5.1"
python-dotenv = "^0.10.0"
influxdb = "^5.2"
pymongo = "^3.7"
motor = "^2.0"
cachetools = "^3.0"
