[build-system]
requires = ["poetry-core>=1.0.2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cosmoz-rest-wrapper"
description = "cosmoz rest API application"
version = "0.0.1"
authors = ["Ashley Sommer <Ashley.Sommer@csiro.au>"]
license = "Apache-2.0"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.6.1"
# These packages are mandatory and form the core of this package’s distribution.
uvloop = "^0.14.0"
sanic = "~19.6.3"
sanic-plugins-framework = "~0.9.5"
sanic-cors = "^0.10.0.post3"
sanic-restplus = "~0.5.4"
sanic-jinja2-spf = "*"
sanic-session-spf = "*"
sanic-metrics = "^0.0.6"
orjson = "2.5.2"
python-dotenv = "^0.10.0"
influxdb = "^5.2"
pymongo = "^3.7"
motor = ">=2.3.0,<2.4"
cachetools = "^3.0"
Sanic-OAuthlib = "^0.2.1"
